# hashish

./: Cargo.toml  README.md
src/: lib.rs  map.rs  set.rs
src/raw/: alloc.rs  mod.rs
