[package]
name = "hashbrown"
version = "0.15.2"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = " A spicy fork of hashbrown. Fast hash maps with vibes. 🌿 "
license = "MIT OR Apache-2.0"
repository = "https://github.com/liagha/hashish"
readme = "./README.md"
keywords = ["hash", "no_std", "hashmap", "swisstable"]
categories = ["data-structures", "no-std"]
exclude = [".github", "/ci/*"]
edition = "2021"
rust-version = "1.65.0"

[dependencies]
# For the default hasher
foldhash = { path = "foldhash", version = "0.1.2", default-features = false, optional = true }

# Support for allocators that use allocator-api2
allocator-api2 = { version = "0.2.9", optional = true, default-features = false, features = [
    "alloc",
] }

# Equivalent trait which can be shared with other hash table implementations.
equivalent = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
rand = { version = "0.9.0", features = ["small_rng"] }
bumpalo = { version = "3.13.0", features = ["allocator-api2"] }

[features]
default = ["default-hasher", "inline-more", "allocator-api2", "equivalent", "raw-entry"]

# Enables the RustcEntry API used to provide the standard library's Entry API.
rustc-internal-api = []

# Enables the deprecated RawEntry API.
raw-entry = []

# Provides a default hasher. Currently, this is foldhash but this is subject to
# change in the future. Note that the default hasher does *not* provide HashDoS
# resistance, unlike the one in the standard library.
default-hasher = ["dep:foldhash"]

# Enables usage of `#[inline]` on far more functions than by default in this
# crate. This may lead to a performance increase but often comes at a compile
# time cost.
inline-more = []

[package.metadata.docs.rs]
features = ["raw-entry"]
rustdoc-args = ["--generate-link-to-definition"]
